# swagger-output.json
@@ -1465,19 +1465,12 @@
                 "seat_id": {
                   "example": 87
                 },
-                "total_amount": {
-                  "example": 300
-                },
                 "paymentDetails": {
                   "type": "object",
                   "properties": {
                     "payment_method": {
                       "type": "string",
                       "example": "UPI"
-                    },
-                    "payment_status": {
-                      "type": "string",
-                      "example": "pending"
                     }
                   }
                 }
