# validation/paymentValidation.js
@@ -1,8 +1,7 @@
 const Joi = require('joi');
 
 const paymentSchema = Joi.object({
-  payment_method: Joi.string().valid('UPI',"Netbanking",'Bhim-UPI').required(),
-  payment_status: Joi.string().valid('success','failed','pending').required()
+  payment_method: Joi.string().valid('UPI',"Netbanking",'Bhim-UPI').required()
 });
 
 module.exports = paymentSchema;
